--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Stacy M Photography</title>
+    <link rel="icon" href="./assets/favicon.png">
     <meta name="description" content="Stacy Mcquerrey's Photography Page and Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style Sheets -->
