--- a/testimonials.html
+++ b/testimonials.html
@@ -72,7 +72,7 @@
 
 	<div id="testimonials">
 	  <div class="container-fluid">
-	  <h3 id="subtitle" class="text-center"> Testimonials </h3>    
+	  <h3 id="subtitle testimonials" class="text-center"> Testimonials </h3>    
        <section class="row">
 
         <div class="float-left col-xs-12 col-sm-6 col-md-6 col-lg-4">
