changes to background image

--- a/testimonials.html
+++ b/testimonials.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Stacy M Photography</title>
         <link rel="icon" href="./assets/favicon.png">
-    <meta name="description" content="Stacy Mcquerrey's Photography Page and Portfolio">
+    <meta name="description" content="Stacy McQuerrey's Photography Page and Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style Sheets -->
     <link rel="stylesheet" href="./css/resets.css">
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand heading" href="#home">Stacy Mcquerrey</a>
+        <a class="navbar-brand heading" href="#home">Stacy McQuerrey</a>
         </div>
      	<div class="navbar-collapse collapse" id="navbar">
      	  <ul class="nav navbar-nav">
@@ -59,7 +59,7 @@
 	</nav>
 	<header id="one" class="one">
 	  <div class="picture">
-	    <h1 class="fancy">Stacy Mcquerrey Photography</h1>
+	    <h1 class="fancy">Stacy McQuerrey Photography</h1>
 	    <h4 class="smaller">Let me capture your inner fairytale</h4>
 	    <hr class="hidden">
 	  </div>
@@ -199,8 +199,8 @@
           </section>
        	  <section id="contact-info" class="col-sm-4">
             <span>Contact: </span><br>
-            <p>Stacy Mcquerrey: (419) 612-2030</p>
-            <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">McquerreyS@yahoo.com</a>
+            <p>Stacy McQuerrey: (419) 612-2030</p>
+            <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">mcquerreyS@yahoo.com</a>
             <br>
            <hr class="visible-xs">
           </section>
