--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Stacy M Photography</title>
         <link rel="icon" href="./assets/favicon.png">
-    <meta name="description" content="Stacy Mcquerrey's Photography Page and Portfolio">
+    <meta name="description" content="Stacy McQuerrey's Photography Page and Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style Sheets -->
     <link rel="stylesheet" href="./css/resets.css">
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand heading" href="#home">Stacy Mcquerrey</a>
+        <a class="navbar-brand heading" href="#home">Stacy McQuerrey</a>
         </div>
      	<div class="navbar-collapse collapse" id="navbar">
      	  <ul class="nav navbar-nav">
@@ -369,7 +369,7 @@
       <div class="container-fluid">
         <div class="row">
           <section id="address" class="col-sm-4">
-          	<span>Mcquerrey Studios:</span><br>
+          	<span>McQuerrey Studios:</span><br>
           	252 John Street<br>
             Galion, OH 44833
           <p>*Please book a slot prior to arrival. Will travel half way within Ohio, or to location <span>($25/50)</span> </p>
@@ -377,8 +377,8 @@
           </section>
        	  <section id="contact-info" class="col-sm-4">
             <span>Contact: </span><br>
-            <p>Stacy Mcquerrey: <a href="tel:419-612-5008"><span class="phone">(419) 612-2030</span></a></p>
-            <a class="phone" href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">McquerreyS@yahoo.com</a>
+            <p>Stacy McQuerrey: <a href="tel:419-612-5008"><span class="phone">(419) 612-2030</span></a></p>
+            <a class="phone" href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">mcquerreyS@yahoo.com</a>
             <br>
            <hr class="visible-xs">
           </section>
@@ -386,7 +386,7 @@
             <a href="https://www.facebook.com/stacy.mcquerrey" target="_blank"><i class="ion-social-facebook"><span>acebook</span></i></a>
           </section>
         </div>
-       	<div class="text-center">&copy; Copyright Mcquerrey Studios 2017</div>
+       	<div class="text-center">&copy; Copyright McQuerrey Studios 2017</div>
       </div>
 	</footer>
 
