--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Stacy M Photography</title>
     <link rel="icon" href="./assets/favicon.png">
-    <meta name="description" content="Stacy Mcquerrey's Photography Page and Portfolio">
+    <meta name="description" content="Stacy McQuerrey's Photography Page and Portfolio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style Sheets -->
     <link rel="stylesheet" href="./css/resets.css">
@@ -33,7 +33,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-        <a class="navbar-brand heading" href="#home">Stacy Mcquerrey</a>
+        <a class="navbar-brand heading" href="#home">Stacy McQuerrey</a>
         </div>
      	<div class="navbar-collapse collapse" id="navbar">
      	  <ul class="nav navbar-nav">
@@ -59,7 +59,7 @@
 	</nav>
 	<header id="one" class="one">
 	  <div class="picture">
-	    <h1 class="fancy">Stacy Mcquerrey Photography</h1>
+	    <h1 class="fancy">Stacy McQuerrey Photography</h1>
 	    <h4 class="smaller">Let me capture your inner fairytale</h4>
 	    <hr class="hidden">
 	  </div>
@@ -76,7 +76,7 @@
 	  </div>
 	  <div>
 	    <br>
-	    <h3 id="about-name"> Stacy Mcquerrey</h3>
+	    <h3 id="about-name"> Stacy McQuerrey</h3>
 	      <h4 id="about-blurb">Experienced Wedding and Fantasy Photographer <span><h6>Galion, Ohio</h6></span></h4>
 	      <hr class="abouthr">
 	  </div>
@@ -134,7 +134,7 @@
             <h3 class="test-name"> Brian Parker </h3>
             <hr><br>
              <input type="checkbox" class="read-more-state" id="post-3" />
-            <p class="text-justify info read-more-wrap">"I have modeled for a long time, and I have shot with photographers all over the nation and abroad. I have never shot with a photographer who puts in more effort than Stacy Mcquerrey. I saw Stacy's work about a year ago, and I had been trying to set up a shoot with her for a while. We finally scheduled a shoot together a few months ago. <span class="read-more-target">She didn't have much experience shooting male models. However, her inexperience shooting male models did not show during our shoot. Stacy formulated the ideas and even guided me on how to pose. I really felt like an amateur shooting with her because I did not do any of the work. Stacy had planned the whole shoot originally outside, but due to weather conditions we had to wing the shoot in an indoor location. This did not stop Stacy from perfecting an idea. We probably shot for 1-2 hours and her photoset was some of the best photos I have in my portfolio. One of her photos is even my avatar to my Facebook page. The reason Stacy is great behind the camera is her experience and creativity. She has been shooting models for many years and her work shows it. She is a professional no doubt about it. Stacy will put in the work with her desire to create the best photo that other photographers will take for granted. Stacy is just an amazing person to be around. I am a professional underwear and travel model, and I regularly get paid for my time during shoots. However, my skill level is in no way close to Stacy's professionalism. She is one of the only photographers I would pay for a shoot, and I am really looking forward to collaborating on more art with Stacy in the future."</span></p>
+            <p class="text-justify info read-more-wrap">"I have modeled for a long time, and I have shot with photographers all over the nation and abroad. I have never shot with a photographer who puts in more effort than Stacy McQuerrey. I saw Stacy's work about a year ago, and I had been trying to set up a shoot with her for a while. We finally scheduled a shoot together a few months ago. <span class="read-more-target">She didn't have much experience shooting male models. However, her inexperience shooting male models did not show during our shoot. Stacy formulated the ideas and even guided me on how to pose. I really felt like an amateur shooting with her because I did not do any of the work. Stacy had planned the whole shoot originally outside, but due to weather conditions we had to wing the shoot in an indoor location. This did not stop Stacy from perfecting an idea. We probably shot for 1-2 hours and her photoset was some of the best photos I have in my portfolio. One of her photos is even my avatar to my Facebook page. The reason Stacy is great behind the camera is her experience and creativity. She has been shooting models for many years and her work shows it. She is a professional no doubt about it. Stacy will put in the work with her desire to create the best photo that other photographers will take for granted. Stacy is just an amazing person to be around. I am a professional underwear and travel model, and I regularly get paid for my time during shoots. However, my skill level is in no way close to Stacy's professionalism. She is one of the only photographers I would pay for a shoot, and I am really looking forward to collaborating on more art with Stacy in the future."</span></p>
             <label for="post-3" class="read-more-trigger"></label>
 	  	  </section>
      </div>
@@ -153,7 +153,7 @@
       <div class="container-fluid">
         <div class="row">
           <section id="address" class="col-sm-4">
-          	<span>Mcquerrey Studios:</span><br>
+          	<span>McQuerrey Studios:</span><br>
           	252 John Street<br>
             Galion, OH 44833
           <p>*Please book a slot prior to arrival. Will travel half way within Ohio, or to location <span>($25/50)</span> </p>
@@ -161,8 +161,8 @@
           </section>
        	  <section id="contact-info" class="col-sm-4">
             <span>Contact: </span><br>
-            <p>Stacy Mcquerrey: <a href="tel:419-612-5008"><span class="phone">(419) 612-2030</span></a></p>
-            <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">McquerreyS@yahoo.com</a>
+            <p>Stacy McQuerrey: <a href="tel:419-612-5008"><span class="phone">(419) 612-2030</span></a></p>
+            <a href="mailto:mcquerreys@yahoo.com?Subject=Hello%20Stacy" target="_top">mcquerreys@yahoo.com</a>
             <br>
            <hr class="visible-xs">
           </section>
@@ -170,7 +170,7 @@
             <a href="https://www.facebook.com/stacy.mcquerrey" target="_blank"><i class="ion-social-facebook"><span>acebook</span></i></a>
           </section>
         </div>
-       	<div class="text-center">&copy; Copyright Mcquerrey Studios 2017</div>
+       	<div class="text-center">&copy; Copyright McQuerrey Studios 2017</div>
       </div>
 	</footer>
 
